@@ -139,13 +139,13 @@
   <tr>
     <td>Bootloader optional arguments</td>
     <td class="good">Yes</td>
-    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
     <td class="good">Yes</td>
   </tr>
   <tr>
     <td>Bootloader MBR drive selection</td>
     <td class="good">Yes</td>
-    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
     <td class="good">Yes</td>
   </tr>
   <tr>
