@@ -1,9 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.510 2005/12/04 03:25:19 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.511 2005/12/05 00:55:59 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  4 Dec 2005; Preston Cody <codeman@gentoo.org>
+  webgli_template.html: valign=top on left side.
+  webgli: fix bootloader boot_device. now working.
+  webgli: CC proxy in progress.
 
   3 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/webgli_template.html:
